# system_status_bar_macos

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: test.yml
examples/: break_event_loop.rs  break_event_loop_tokio.rs  cpu_usage.rs  cpu_usage_tokio.rs  hello_world.rs  hello_world_tokio.rs  menu.rs  menu_tokio.rs  update_menu.rs  update_menu_tokio.rs  use_thread.rs  use_tokio.rs
src/: lib.rs
