[package]
name = "system_status_bar_macos"
version = "0.1.1"
edition = "2021"
description = "Library for interacting with the system's status bar for macOS, or more simply, the one for using [NSStatusBar systemStatusBar]."
license = "MIT OR Apache-2.0"
repository = "https://github.com/amachang/system_status_bar_macos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.2.0"
icrate = { version = "0.0.3", features = ["apple", "Foundation_all", "AppKit_all"] }
objc2 = "0.4.0"

[dev-dependencies]
sysinfo = "0.29.5"
tokio = { version = "1", features = ["full"] }

